# windows-pulse

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md
python/windowpulse/: __init__.py  _native.pyi  cli.py  detection.py  errors.py  models.py  processing.py  queue.py  recorder.py  video.py  windows.py
src/: lib.rs
tests/: conftest.py  test_detection.py  test_models_and_windows.py  test_queue.py  test_recorder.py  test_video_and_cli.py
